--- a/track/SConscript
+++ b/track/SConscript
@@ -46,7 +46,6 @@ env.Program('track', source,
     LIBS=libs+env.get('LIBS'),
     LIBPATH=env.get('LIBPATH')+libpath,
     CPPPATH=env.get('CPPPATH')+include,
-
-    CFLAGS='$CFLAGS $LIBCFLAGS '+cflags,
-    LINKFLAGS= '$LINKFLAGS $USER')
+    CFLAGS ='$CFLAGS '+cflags,
+    )
 
