--- a/gui/SConscript
+++ b/gui/SConscript
@@ -8,24 +8,22 @@ import os
 
 Import('env')
 
-source=[
+source = [
     'main.c'
-    ]
+]
 
 
-libs=[
+libs = [
     'libgui.a',
     'libimage.a',
     'libjpeg.a',
     'libpng.a',
-    'libzlib.a',
-    'libc.a'
-]
+    'libzlib.a']
 
 env.Program('gui', source,
-    LIBS=env.get('LIBS')+libs,
-    CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libgui/ -Iapp/libjpeg',
-    LINKFLAGS= '$LINKFLAGS $USER')
+            LIBS=env.get('LIBS')+libs,
+            CFLAGS='$CFLAGS $LIBCFLAGS',
+            )
 
 # env.Objcopy('gui','gui',OBJCOPYFLAGS='-S --strip-all')
-#env.Objcopy('gui.dbg','gui',OBJCOPYFLAGS='--only-keep-debug')
+# env.Objcopy('gui.dbg','gui',OBJCOPYFLAGS='--only-keep-debug')
