--- a/launcher/SConscript
+++ b/launcher/SConscript
@@ -72,5 +72,4 @@ libs=[
 env.Program('launcher', source,
     LIBS=libs+env.get('LIBS'),
 
-    CFLAGS='$CFLAGS $LIBCFLAGS -DLV_LVGL_H_INCLUDE_SIMPLE=1',
-    LINKFLAGS= '$LINKFLAGS $USER')
+    CFLAGS='$CFLAGS -DLV_LVGL_H_INCLUDE_SIMPLE=1')
