--- a/gnuboy/SConscript
+++ b/gnuboy/SConscript
@@ -39,7 +39,6 @@ include = [
     'sys/sdl2/',
     'include',
     '.',
-    '../../eggs/include/c',
     '../../eggs/include',
 ]
 
@@ -60,6 +59,6 @@ libpath = [
 
 env.Program('gnuboy', source,
             LIBS=libs+env.get('LIBS'),
-            LIBPATH=libpath,
-            CPPPATH=include,
+            LIBPATH=libpath+env['LIBPATH'],
+            CPPPATH=include+env['CPPPATH'],
             )
