--- a/microui/SConscript
+++ b/microui/SConscript
@@ -17,7 +17,6 @@ env = env.Clone(
 
 libs=[
     'libgui.a',
-    'libc.a'
 ]
 
 source= [
@@ -28,9 +27,7 @@ source= [
 
 
 env.Program('microui',source,
-    LIBS=env.get('LIBS')+libs,
-    CFLAGS='$CFLAGS $LIBCFLAGS',
-    LINKFLAGS= '$LINKFLAGS $USER')
+    LIBS=libs+env.get('LIBS'),)
 
 # env.Objcopy('microui','microui',OBJCOPYFLAGS='-S')
 # env.Objcopy('microui.dbg','microui',OBJCOPYFLAGS='--only-keep-debug')
