--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,66 @@ app/lua/luat
 app/rust/test/test-rs
 
 kernel.map
+cmd/cat
+cmd/date
+cmd/echo
+cmd/hexdump
+cmd/touch
+gnuboy/gnuboy
+infones/infones
+mgba/mgba
+mgba/miniunz
+quickjs/qjs
+quickjs/qjsc
+sdl2/player
+sdl2/sdl2
+sdl2/showfont
+sdl2/showimage
+test/test-file
+test/test-mem
+test/test-stdio
+test/test-stdlib
+test/test-string
+test/test-uncompress
+cmd/ls
+etk/etk
+gui/gui
+hello/hello
+launcher/launcher
+lua/lua
+lua/luac
+lua/luat
+lvgl/lvgl
+microui/microui
+scheme/scheme
+test/test
+test/test-musl
+track/track
+cmd/cat
+cmd/date
+cmd/echo
+cmd/hexdump
+cmd/touch
+gnuboy/gnuboy
+infones/infones
+cmd/cat
+cmd/date
+cmd/echo
+cmd/hexdump
+cmd/touch
+gnuboy/gnuboy
+infones/infones
+mgba/mgba
+mgba/miniunz
+quickjs/qjs
+quickjs/qjsc
+sdl2/player
+sdl2/sdl2
+sdl2/showfont
+sdl2/showimage
+test/test-file
+test/test-mem
+test/test-stdio
+test/test-stdlib
+test/test-string
+test/test-uncompress
