--- a/.gitignore
+++ b/.gitignore
@@ -118,5 +118,14 @@ test/test-stdio
 test/test-stdlib
 test/test-string
 test/test-uncompress
+test/test-fork
+test/test-free
+
+scheme/*.boot
 
 bin/**
+
+rust/test/target
+
+*.gb
+
