--- a/gnuboy/SConscript
+++ b/gnuboy/SConscript
@@ -8,6 +8,7 @@ import os
 
 Import('env')
 
+cflags='-DIS_LITTLE_ENDIAN  -DIS_LINUX -D_GNU_SOURCE=1 -D_REENTRANT '
 
 source = []
 source += Glob('src/*.c')
@@ -60,4 +61,5 @@ env.Program('gnuboy', source,
             LIBS=libs+env.get('LIBS'),
             LIBPATH=libpath+env['LIBPATH'],
             CPPPATH=include+env['CPPPATH'],
+            CFLAGS='$CFLAGS $LIBCFLAGS '+cflags
             )
